force-app/main/default/objects/OpportunityLineItem/fields/Amount_Categories__c.field-meta.xml
<CustomField>
    <fullName>Amount_Categories__c</fullName>
    <description>A surgical field to break the amounts into categories baaed on what product is being sold</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Categories</label>
    <length>50</length>
    <type>Text</type>
</CustomField>