force-app/main/default/objects/OpportunityLineItem/fields/External_Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Product_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Opportunity Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>