force-app/main/default/objects/OpportunityLineItem/fields/Growth_Amount_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Growth_Amount_First_Year__c</fullName>
    <inlineHelpText>Please input the lump sum growth amount for the first year for this product.</inlineHelpText>
    <label>Growth Amount (First Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>