force-app/main/default/objects/OpportunityLineItem/fields/Hip_surgery_type_JPN_Only__c.field-meta.xml
<CustomField>
    <fullName>Hip_surgery_type_JPN_Only__c</fullName>
    <inlineHelpText>Entry is required for Hip product only</inlineHelpText>
    <label>Hip surgery type (JPN Only)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>THA</fullName>
            </value>
            <value>
                <fullName>BHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>