force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opp Product Segment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>