force-app/main/default/objects/OpportunityLineItem/fields/Price_Impact_Amount_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Price_Impact_Amount_First_Year__c</fullName>
    <inlineHelpText>Please input the price impact amount for this product for the first year of the deal.</inlineHelpText>
    <label>Price Impact Amount (First Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>