force-app/main/default/objects/OpportunityLineItem/fields/Product_Score__c.field-meta.xml
<CustomField>
    <fullName>Product_Score__c</fullName>
    <formula>IF((Product_Segment__c == &apos;Knees&apos; || Product_Segment__c == &apos;Hips&apos; || Product_Segment__c == &apos;Extremities&apos; || Product_Segment__c == &apos;Trauma&apos;),
IF( Quantity &gt;1, 4,
IF(Quantity =1, 1,
IF(Quantity =0, 0,
0
)
)
),
IF( Quantity &gt;1, 4,
IF(Quantity =1, 4,
IF(Quantity =0, 0,
0
)
)
)
)</formula>
    <label>Product Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>