force-app/main/default/objects/OpportunityLineItem/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Segment</label>
    <type>Text</type>
</CustomField>