force-app/main/default/objects/OpportunityLineItem/fields/Product_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Segment__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Sub_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub-Segment</label>
    <type>Text</type>
</CustomField>