force-app/main/default/objects/OpportunityLineItem/fields/Product_Use__c.field-meta.xml
<CustomField>
    <fullName>Product_Use__c</fullName>
    <label>Product Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>