force-app/main/default/objects/OpportunityLineItem/fields/Segmant_Hips__c.field-meta.xml
<CustomField>
    <fullName>Segmant_Hips__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment Hips</label>
    <length>18</length>
    <type>Text</type>
</CustomField>