force-app/main/default/objects/OpportunityLineItem/fields/Term_Length_Years__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Years__c</fullName>
    <label>Term Length (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>